tests/diagnostics/catalog/snapshots/ir/IR0039.snap
error[IR0039]: IR_E_INVALID_MODULE
 --> tests/diagnostics/catalog/sources/ir/IR0039.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0039
  = help: keep IR validation diagnostics structured and catalog-backed
